# picotest-rs

./: Cargo.toml  release.py
.cargo/: config.toml
src/: main.rs
